[tool.poetry]
name = "caracara-filters"
version = "0.2.0"
description = "FQL generation engine for Caracara"
authors = ["Chris Hammond <chris.hammond@crowdstrike.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "caracara_filters"}]
repository = "https://github.com/CrowdStrike/caracara-filters"
keywords = [
    "api",
    "crowdstrike",
    "falcon-platform",
    "fql",
    "query-language",
    "sdk",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Filters",
]

[tool.poetry.dependencies]
python = "^3.7.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.0"
flake8 = "^5.0"
freezegun = "^1.2.2"
pydocstyle = "^6.3.0"
pylint = "^2.17.5"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
